--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,2 +1,4 @@
-@import "~bootstrap/scss/bootstrap.scss";
+@use "./partials/header" as *;
+@use "./partials/footer" as *;
 
+@import "~bootstrap/scss/bootstrap.scss";
