--- a/resources/scss/partials/header.scss
+++ b/resources/scss/partials/header.scss
@@ -2,6 +2,7 @@ header {
     display: flex;
     justify-content: space-around;
     background-color: orange;
+    margin-bottom: 20px;
     
     nav {
         display: flex;
@@ -16,6 +17,7 @@ header {
     }
 
     img {
-        width: 30%;
+        max-width: 100%;
+        width: 250px;
     }
 }
